separated server and app
